// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter should drop undefined values: evenNum event graph 1`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"number →? *\\"
     }
  },
  2. Multi [
     *  Single {
        \\"type\\": 13,
        \\"data\\": {}
     }
  ]
]"
`;

exports[`event.filter should drop undefined values: num event graph 1`] = `
"Seq [
  1. Single {
     \\"type\\": 12,
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"number\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": 11,
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": 14,
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": 12,
           \\"data\\": {
             \\"subtype\\": \\"event\\",
             \\"fullName\\": \\"number →? *\\"
           }
        },
        4. Multi [
           *  Single {
              \\"type\\": 13,
              \\"data\\": {}
           }
        ]
     ]
  ]
]"
`;
